<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <CheckBox
        android:id="@+id/chkBraille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/question_lift_braille" />


    <CheckBox
        android:id="@+id/chkSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/question_lift_sound" />

    <CheckBox
        android:id="@+id/chkAutomatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/question_lift_automatic" />

    <CheckBox
        android:id="@+id/chkStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/question_lift_step" />

    <CheckBox
        android:id="@+id/chkGap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/question_lift_gap" />


</LinearLayout>