<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".Register.RegisterProfesorActivity">

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/tvRegistroP"
        android:textColor="@color/red"
        android:textSize="36sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgvFotoPerfil"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_below="@+id/tvRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/custom_image_button"
        android:textSize="22sp"
        app:srcCompat="@drawable/ic_user"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/etAlias"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/imgvFotoPerfil"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:hint="@string/et_Alias"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/etCodigoCentro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etAlias"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:hint="@string/et_CodigoCentro"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/etEmailReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etCodigoCentro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:drawableLeft="@drawable/ic_send"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_EmailReg"
        android:inputType="textPersonName"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/etPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etEmailReg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:hint="@string/et_PasswordReg"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="@color/blue" />


    <EditText
        android:id="@+id/etPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etPasswordReg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:hint="@string/et_PasswordRepeat"
        android:inputType="textPassword"
        android:textColorHint="@color/blue" />


    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordRepeat"
        android:layout_centerVertical="true"
        android:layout_marginTop="92dp"
        android:background="@drawable/ic_button_red"
        android:onClick="registrar"
        android:text="@string/btn_RegistrarUsuario"
        android:textColor="@color/blanco"
        android:textSize="18sp" />

</RelativeLayout>