<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".RegisterTeacherActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_cruz_red"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/etAlias"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tvRegistroP"
        android:textColor="@color/red"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/etAlias"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/etCenterCodeTeacher"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:hint="@string/et_Alias"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/etCenterCodeTeacher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/etEmailRegProfesor"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_fingerprint"
        android:drawablePadding="10dp"
        android:hint="@string/et_CodigoCentro"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/etEmailRegProfesor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/etPasswordRegProfesor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_send"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_EmailReg"
        android:inputType="textPersonName"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/etPasswordRegProfesor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/etPasswordRepeatTeacher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:hint="@string/et_PasswordReg"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="@color/blue" />


    <EditText
        android:id="@+id/etPasswordRepeatTeacher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="180dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:hint="@string/et_PasswordRepeat"
        android:inputType="textPassword"
        android:textColorHint="@color/blue" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_button_red"
        android:onClick="checkUniqueAlias"
        android:text="@string/btn_RegistrarUsuario"
        android:textColor="@color/blanco"
        android:textSize="18sp" />



</RelativeLayout>