<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItineraryActivity"
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:src="@drawable/ic_cruz"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/img_icon"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:background="@drawable/white_translucid"/>

    <ImageView
        android:id="@+id/img_camera"
        android:layout_gravity="top"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="320dp" />
<!--
    <TextView
        android:layout_gravity="bottom"
        android:id="@+id/tv_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Añadir obstaculo"
        android:layout_weight="1"
        android:layout_marginBottom="230dp"
        android:textSize="20dp"/>
-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="160dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/blanco">
        <Spinner
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/spin_access"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="70dp">
        <Button
            android:id="@+id/btn_new"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button_red"
            android:text="@string/btnNuevoObstaculoText"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button_red"
            android:text="@string/btnConfirmarObstaculoText"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/ic_button_green"
        android:text="@string/btnCrearItinerarioText"
        android:textColor="@color/white"
        android:textSize="20dp" />


</FrameLayout>